# langchain_capstone_project

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
src/: endpoint_resources.py  main.py  settings.py  utils.py
